--- a/examples/test_ijmetadata.ipynb
+++ b/examples/test_ijmetadata.ipynb
@@ -56,68 +56,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathfinder = path.PathFinder(regexp='RoiSetAuto.*', extension='zip')"
+    "# test endocytosis/io/image/metadata/ijmetadata.py\n",
+    "data = im.imagej_metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_filenames = [p[0] for p in pathfinder.load(folder)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\endocytosis_data_subset\\\\2016-12-14 iso\\\\2016-12-14 Sp57 proto 003\\\\RoiSetAuto-100.zip'"
+       "{'filename': 'filename.tif',\n",
+       " 'DimensionOrder': 'XYCZT',\n",
+       " 'SizeC': '1',\n",
+       " 'SizeT': '61',\n",
+       " 'SizeX': '1024',\n",
+       " 'SizeY': '1024',\n",
+       " 'SizeZ': '6',\n",
+       " 'pixelsize': 0.13000013000013,\n",
+       " 'unit': 'um'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder + os.path.sep + zip_filenames[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0030-0030-0964#x {'px': array([729.5, 964.5])}\n",
-      "0031-0031-0965 {'px': array([728.5, 965.5])}\n",
-      "0032-0032-0965 {'px': array([730.5, 965.5])}\n",
-      "0033-0033-0967 {'px': array([729.5, 967.5])}\n",
-      "0034-0034-0967 {'px': array([728.5, 967.5])}\n",
-      "0035-0035-0968 {'px': array([726.5, 968.5])}\n",
-      "0036-0036-0970#x {'px': array([726.5, 970.5])}\n",
-      "0037-0037-0970 {'px': array([726.5, 970.5])}\n",
-      "0038-0038-0969 {'px': array([727.5, 969.5])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "with file_reading.IJZipReader(regexp=r'.*[0-9](#x)?\\.roi$', sep=None) as roi_reader:\n",
-    "    roi_reader.read(folder + os.path.sep + zip_filenames[0])\n",
-    "    for k, v in roi_reader.items():\n",
-    "        print(k, v.centroid)"
+    "def to_dict(filename, data):\n",
+    "    \"\"\"\n",
+    "    Convert IMJMetadata to dictionary.\n",
+    "    \"\"\"\n",
+    "    unused_keys = \\\n",
+    "        [' BitsPerPixel', ' IsInterleaved', ' IsRGB', ' LittleEndian',\n",
+    "         ' PixelType', ' Series 0 Name', 'Info', 'Labels']\n",
+    "\n",
+    "    unit_conversion = {'microns': 'um', 'nanometers': 'nm',\n",
+    "                       'picometers': 'pm'}\n",
+    "\n",
+    "    info = data['Info'].split('\\n')[:12]\n",
+    "    info = dict([item.split(' = ') for item in info])\n",
+    "    ret = {'filename': filename}\n",
+    "    ret.update({k.strip(): v for k, v in info.items() if k not in unused_keys})\n",
+    "    # replace 'spacing' key with 'pixelsize'\n",
+    "    ret.update({'pixelsize': data['spacing']})\n",
+    "\n",
+    "    # replace 'microns' with 'um', 'nanometers' with 'nm', etc.\n",
+    "    if data['unit'] in unit_conversion.keys():\n",
+    "        ret['unit'] = unit_conversion[data['unit']]\n",
+    "\n",
+    "    return ret\n",
+    "\n",
+    "to_dict('filename.tif', data)"
    ]
   },
   {
