ImageJ and tif file IO
Fixed many bugs with image input/output.

Progress on importing and exporting ImageJ ROI. The to_IJ function of _BaseROI child classes still need to be tested.

Moved 'header_dtype', 'options', and other class variables of IJZipReader to its package's __init__ file. They'll be used as global variables in other modules within the roi package, e.g.
roi_writer.py.

--- a/examples/center_of_mass.ipynb
+++ b/examples/center_of_mass.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# very rough work in progress\n",
+    "\n",
     "import numpy as np\n",
     "import os\n",
     "\n",
