--- a/examples/load_IJ_roi.ipynb
+++ b/examples/load_IJ_roi.ipynb
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RoiSetAuto-100 {'0030-0030-0964#x': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED8AAC8>, '0031-0031-0965': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED8AC18>, '0032-0032-0965': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED8AD68>, '0033-0033-0967': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED8AEB8>, '0034-0034-0967': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED96048>, '0035-0035-0968': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED96198>, '0036-0036-0970#x': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED962E8>, '0037-0037-0970': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED96438>, '0038-0038-0969': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x00000202EED96588>}\n"
+      "RoiSetAuto-100 {'0030-0030-0964#x': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0A58>, '0031-0031-0965': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0B70>, '0032-0032-0965': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0C88>, '0033-0033-0967': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0DA0>, '0034-0034-0967': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0EB8>, '0035-0035-0968': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DD0FD0>, '0036-0036-0970#x': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DE4128>, '0037-0037-0970': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DE4240>, '0038-0038-0969': <endocytosis.io.roi.roi_objects.EllipseROI object at 0x000001FF01DE4358>}\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "b'Iout\\x00\\xe3\\x01\\x00\\x03\\xc2\\x02\\xd7\\x03\\xc7\\x02\\xdc\\x00\\x00Dp\\x80\\x00D5\\xc0\\x00Dq\\xc0\\x00D7\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\\\\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x1e\\x00\\x00\\x00\\x90\\x00\\x00\\x00\\x10\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xa0\\x00\\x00\\x01n\\x00\\x00\\x00\\x00\\x00r\\x00o\\x00i\\x00_\\x00n\\x00a\\x00m\\x00e\\x00T\\x00M\\x00_\\x00Q\\x00u\\x00a\\x00l\\x00i\\x00t\\x00y\\x00:\\x00 \\x005\\x002\\x009\\x00.\\x005\\x004\\x009\\x006\\x002\\x001\\x005\\x008\\x002\\x000\\x003\\x001\\x002\\x00\\n\\x00T\\x00M\\x00_\\x00R\\x00a\\x00d\\x00i\\x00u\\x00s\\x00:\\x00 \\x000\\x00.\\x003\\x00\\n\\x00T\\x00M\\x00_\\x00X\\x00:\\x00 \\x009\\x004\\x00.\\x008\\x003\\x004\\x001\\x000\\x009\\x005\\x004\\x000\\x005\\x002\\x002\\x000\\x002\\x00\\n\\x00T\\x00M\\x00_\\x00Y\\x00:\\x00 \\x001\\x002\\x005\\x00.\\x003\\x009\\x004\\x004\\x003\\x008\\x000\\x008\\x004\\x009\\x000\\x004\\x005\\x001\\x00\\n\\x00S\\x00o\\x00f\\x00t\\x00w\\x00a\\x00r\\x00e\\x00:\\x00 \\x00h\\x00t\\x00t\\x00p\\x00s\\x00:\\x00/\\x00/\\x00g\\x00i\\x00t\\x00h\\x00u\\x00b\\x00.\\x00c\\x00o\\x00m\\x00/\\x00M\\x00i\\x00s\\x00t\\x00e\\x00r\\x00V\\x00l\\x00a\\x00d\\x00i\\x00m\\x00i\\x00r\\x00/\\x00f\\x00i\\x00j\\x00i\\x00_\\x00u\\x00t\\x00i\\x00l\\x00s\\x00\\n\\x00Y\\x00Y\\x00Y\\x00Y\\x00M\\x00M\\x00D\\x00D\\x00:\\x00 \\x002\\x000\\x001\\x008\\x00-\\x008\\x00-\\x002\\x002\\x00\\n\\x00I\\x00m\\x00a\\x00g\\x00e\\x00 \\x00N\\x00a\\x00m\\x00e\\x00:\\x00 \\x00i\\x00m'"
+       "b'Iout\\x00\\xe3\\x01\\x00\\x03\\xc2\\x02\\xd7\\x03\\xc7\\x02\\xdc\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00D\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x1e\\x00\\x00\\x00x\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x88\\x00\\x00\\x01n\\x00\\x00\\x00\\x00\\x00r\\x00o\\x00i\\x00_\\x00n\\x00a\\x00m\\x00e\\x00T\\x00M\\x00_\\x00Q\\x00u\\x00a\\x00l\\x00i\\x00t\\x00y\\x00:\\x00 \\x005\\x002\\x009\\x00.\\x005\\x004\\x009\\x006\\x002\\x001\\x005\\x008\\x002\\x000\\x003\\x001\\x002\\x00\\n\\x00T\\x00M\\x00_\\x00R\\x00a\\x00d\\x00i\\x00u\\x00s\\x00:\\x00 \\x000\\x00.\\x003\\x00\\n\\x00T\\x00M\\x00_\\x00X\\x00:\\x00 \\x009\\x004\\x00.\\x008\\x003\\x004\\x001\\x000\\x009\\x005\\x004\\x000\\x005\\x002\\x002\\x000\\x002\\x00\\n\\x00T\\x00M\\x00_\\x00Y\\x00:\\x00 \\x001\\x002\\x005\\x00.\\x003\\x009\\x004\\x004\\x003\\x008\\x000\\x008\\x004\\x009\\x000\\x004\\x005\\x001\\x00\\n\\x00S\\x00o\\x00f\\x00t\\x00w\\x00a\\x00r\\x00e\\x00:\\x00 \\x00h\\x00t\\x00t\\x00p\\x00s\\x00:\\x00/\\x00/\\x00g\\x00i\\x00t\\x00h\\x00u\\x00b\\x00.\\x00c\\x00o\\x00m\\x00/\\x00M\\x00i\\x00s\\x00t\\x00e\\x00r\\x00V\\x00l\\x00a\\x00d\\x00i\\x00m\\x00i\\x00r\\x00/\\x00f\\x00i\\x00j\\x00i\\x00_\\x00u\\x00t\\x00i\\x00l\\x00s\\x00\\n\\x00Y\\x00Y\\x00Y\\x00Y\\x00M\\x00M\\x00D\\x00D\\x00:\\x00 \\x002\\x000\\x001\\x008\\x00-\\x008\\x00-\\x002\\x003\\x00\\n\\x00I\\x00m\\x00a\\x00g\\x00e\\x00 \\x00N\\x00a\\x00m\\x00e\\x00:\\x00 \\x00i\\x00m'"
       ]
      },
      "execution_count": 8,
@@ -129,35 +129,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zipfile\n",
-    "data = RectROI.to_IJ(roi=el, image_name='im', name='roi_name')\n",
+    "data = RectROI.to_IJ(roi=el, image_name='im', name='roi_name12345')\n",
     "with open('test.roi', 'wb') as f:\n",
     "    f.write(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -177,120 +177,13 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "el.select_params['options']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0], dtype=int16)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.frombuffer(roi_reader.bytestreams[0][:64], HEADER_DTYPE)['options']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['RoiSetAuto-100'])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "roi_reader.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'RoiSetAuto-100.zip'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zip_filenames[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\endocytosis_data_subset\\\\2016-12-14 iso\\\\2016-12-14 Sp57 proto 003'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import io"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = io.BytesIO(roi_reader.bytestreams[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.close()"
    ]
   },
   {
